// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL statements Formatter Generates formatted output for Angular frontend 1`] = `
"# this is an auto generated file. This will be overwritten

query GetProject($id: ID!) {
  getProject(id: $id) {
    id
    name
    createdAt
    updatedAt
  }
}
"
`;

exports[`GraphQL statements Formatter Generates formatted output for Flow frontend 1`] = `
"// @flow
// this is an auto generated file. This will be overwritten

export const getProject = /* GraphQL */ \`
  query GetProject($id: ID!) {
    getProject(id: $id) {
      id
      name
      createdAt
      updatedAt
    }
  }
\`;
"
`;

exports[`GraphQL statements Formatter Generates formatted output for GraphQL language 1`] = `
"# this is an auto generated file. This will be overwritten

query GetProject($id: ID!) {
  getProject(id: $id) {
    id
    name
    createdAt
    updatedAt
  }
}
"
`;

exports[`GraphQL statements Formatter Generates formatted output for JS frontend 1`] = `
"/* eslint-disable */
// this is an auto generated file. This will be overwritten

export const getProject = /* GraphQL */ \`
  query GetProject($id: ID!) {
    getProject(id: $id) {
      id
      name
      createdAt
      updatedAt
    }
  }
\`;
"
`;

exports[`GraphQL statements Formatter Generates formatted output for TS frontend 1`] = `
"/* tslint:disable */
/* eslint-disable */
// this is an auto generated file. This will be overwritten

import * as APITypes from \\"../API\\";
type GeneratedQuery<InputType, OutputType> = string & {
  __generatedQueryInput: InputType;
  __generatedQueryOutput: OutputType;
};

export const getProject = /* GraphQL */ \`query GetProject($id: ID!) {
  getProject(id: $id) {
    id
    name
    createdAt
    updatedAt
  }
}
\` as GeneratedQuery<
  APITypes.GetProjectQueryVariables,
  APITypes.GetProjectQuery
>;
"
`;
